2016-09-03  Oliver Kiddle  <opk@zsh.org>

	* Marko Myllynen: 39158: Completion/Unix/Command/_libvirt:
	cleanup following review comments of function

	* 39165: Completion/Unix/Command/_dmidecode,
	Completion/Unix/Command/_ant, Completion/Linux/Command/_ss,
	Completion/Unix/Command/_espeak, Completion/Unix/Command/_git,
	Completion/Unix/Command/_prove, Completion/Unix/Command/_tin,
	Completion/Unix/Command/_patch, Completion/Unix/Command/_look,
	Completion/Unix/Command/_md5sum: update options

2016-09-02  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_postfix: _postfix_queue_id:
	Unbreak completion of short queue ids of held/active messages,
	broken in 39108.

	* 39154: Completion/Unix/Type/_files: -/ with list-dirs-first
	resulted in a bad pattern, thus aborting completion partway.

2016-08-31  Oliver Kiddle  <opk@zsh.org>

	* Marko Myllynen: 39118: Completion/Unix/Command/_libvirt:
	(almost) complete virsh completions

2016-08-31  Peter Stephenson  <p.stephenson@samsung.com>

	* 39141: Test/D04parameter.ztst: use zsh in SHLVL test to remove
	ambiguous behaviour of sh.

	* Stephane: 39125: Src/exec.c, Test/D04parameter.ztst: More care
	decrementing SHLVL on exec; not needed in subshells.

2016-08-31  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39122: Completion/Unix/Command/_git: __git_recent_branches:
	Silence warning on an edge case.

2016-08-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 39131: Functions/Misc/add-zle-hook-widget: return on error
	needs to be at the outer scope.

2016-08-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39108 (tweaked): Completion/Unix/Command/_postfix: Support
	$enable_long_queue_ids.

	* 39110: Completion/Unix/Command/_postfix: Complete 'postconf'.

	* 39107: Completion/Unix/Command/_postfix: Complete
	'postqueue'. Also minor tweaks to 'postsuper'.

	* 39109: Completion/Unix/Command/_postfix: Use mailq to obtain
	queue id's.

2016-08-29  Mikael Magnusson  <mikachu@gmail.com>
